--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,85 @@
+* {
+  box-sizing: border-box;
+}
+body {
+  width: 100%;
+  margin: 0;
+}
 .primary {
   position: absolute;
-  width: auto;
-  height: 50px;
-  background-color: black;
+  width: 100%;
+  height: 200px;
+  background-color: rgb(7, 0, 31);
+  z-index: -1;
+}
+sidebar {
+  grid-area: sidebar;
+  text-align: center;
+  background-color: rgb(232, 228, 252);
+}
+img {
+  margin-top: 50px;
+  width: 250px;
+  height: auto;
+}
+header {
+  box-sizing: content-box;
+  grid-area: header;
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: bold;
+  font-size: 24px;
+  color: white;
+  display: block;
+  text-align: center;
+  height: 200px;
+}
+article {
+  grid-area: article;
+  
+}
+.info {
+  text-align: center;
+}
+.flex {
+  display: flex;
+  flex-wrap: wrap;
+  border-top: double;
+}
+.content {
+  margin: 25px 0px 25px 0px;
+}
+.box {
+  width: 250px;
+  margin-top: 20px;
+}
+.boxContent {
+  min-width: 450px;
+  margin-top: 20px;
+}
+footer {
+  grid-area: footer;
+  background-color: rgb(106, 107, 121);
+  text-align: center;
+  padding: 10px 50px 10px 50px;
+}
+.grid {
+  display: grid;
+  grid-template-areas:
+    'header header header'
+    'sidebar article article'
+    'footer footer footer';
+  grid-column-gap: 30px;
+}
+@media only screen and (max-width: 750px) {
+  .grid {
+    display: grid;
+    grid-template-areas:
+      'header'
+      'sidebar'
+      'article'
+      'footer';
+  }
+  .intro>h3{
+    text-align: center;
+  }
 }
