--- a/google/styles.css
+++ b/google/styles.css
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  font-family: arial, sans-serif;
 }
 body {
   width: 100%;
@@ -11,6 +12,22 @@ body {
   padding: 0;
   padding-right: 4px;
   overflow: hidden;
+  line-height: 24px;
+  height: auto;
+  line-height: normal;
+  padding: 0 4px;
+}
+.li {
+  margin-top: 25px;
+}
+.icon {
+  display: inline;
+  padding: 10px;
+}
+.icon:hover {
+  background-color: #e6e7e9;
+  border-bottom: 1px solid #e6e7e9;
+  border-radius: 40px;
 }
 .ul1 > li {
   float: right;
@@ -39,7 +56,11 @@ body {
 }
 input {
   border: none;
-  align-items: center;
+  min-width: 350px;
+  height: 40px;
+  position: relative;
+  top: -8px;
+  outline: none;
 }
 .input {
   border: 1px solid #dfe1e5;
@@ -47,6 +68,13 @@ input {
   min-width: 300px;
   margin: none;
   width: auto;
+  align-items: center;
+}
+.input > span > img {
+  margin-top: 15px;
+}
+.input:hover {
+  box-shadow: 1px 0px 5px 5px rgba(222, 222, 222, 1);
 }
 footer {
   display: flex;
@@ -123,4 +151,26 @@ footer {
 
 a:hover {
   text-decoration: underline;
+}
+button {
+  background-color: #f8f9fa;
+  border: 1px solid #f8f9fa;
+  border-radius: 4px;
+  color: #3c4043;
+  font-family: arial, sans-serif;
+  font-size: 14px;
+  margin: 11px 4px;
+  padding: 0 16px;
+  line-height: 27px;
+  height: 36px;
+  min-width: 54px;
+  text-align: center;
+  cursor: pointer;
+}
+button:hover {
+  box-shadow: 1px 0px 1px 1px rgba(222, 222, 222, 1);
+}
+.button {
+  background: #1a73e8;
+  border: 1px solid transparent;
 }
