--- a/google/styles.css
+++ b/google/styles.css
@@ -37,6 +37,7 @@ body {
   margin: auto;
   width: 50%;
   margin-top: 198px;
+  min-width: 500px;
 }
 .content > p {
   margin: auto;
@@ -45,7 +46,7 @@ body {
 .content > div {
   margin: 0 auto;
   width: 50%;
-  min-width: 300px;
+  min-width: 500px;
   text-align: center;
 }
 .content > p {
@@ -65,7 +66,7 @@ input {
 .input {
   border: 1px solid #dfe1e5;
   border-radius: 24px;
-  min-width: 300px;
+  min-width: 500px;
   margin: none;
   width: auto;
   align-items: center;
@@ -173,4 +174,7 @@ button:hover {
 .button {
   background: #1a73e8;
   border: 1px solid transparent;
+}
+.button:hover {
+  opacity: 0.8;
 }
