--- a/google/styles.css
+++ b/google/styles.css
@@ -12,13 +12,13 @@ body {
   padding: 0;
   padding-right: 4px;
   overflow: hidden;
-  line-height: 24px;
   height: auto;
   line-height: normal;
   padding: 0 4px;
+  font-size: 13px;
 }
 .li {
-  margin-top: 25px;
+  margin-top: 28px;
 }
 .icon {
   display: inline;
@@ -37,7 +37,7 @@ body {
   margin: auto;
   width: 50%;
   margin-top: 198px;
-  min-width: 500px;
+  min-width: 560px;
 }
 .content > p {
   margin: auto;
@@ -45,8 +45,9 @@ body {
 }
 .content > div {
   margin: 0 auto;
+  margin-top: 20px;
   width: 50%;
-  min-width: 500px;
+  min-width: 560px;
   text-align: center;
 }
 .content > p {
@@ -57,7 +58,7 @@ body {
 }
 input {
   border: none;
-  min-width: 350px;
+  min-width: 400px;
   height: 40px;
   position: relative;
   top: -8px;
@@ -66,8 +67,6 @@ input {
 .input {
   border: 1px solid #dfe1e5;
   border-radius: 24px;
-  min-width: 500px;
-  margin: none;
   width: auto;
   align-items: center;
 }
